--- a/src/contexts/localization/languages/Jet_UI_KR.json
+++ b/src/contexts/localization/languages/Jet_UI_KR.json
@@ -149,10 +149,15 @@
       "refresh": "새로고침",
       "originationFee": "이 대출에는 {{ORIGINATION FEE}}%의 수수료가 부과됩니다.",
       "headsup": "예의주시하세요!",
-      "disclaimer": "제트 프로토콜 메인넷에 진입하려고 합니다. 이용약관 및 금전적 손실 가능성을 이해하고 동의하지 않는 경우 진행하지 마십시오.",
       "accept": "수용하다",
       "warning": "경고",
-      "acceptDisclaimer": "I understand the Terms of Service, Privacy Policy, Cookie Policy and accept the risks."
+      "acceptDisclaimer": "I understand the Terms of Service, Privacy Policy, Cookie Policy and accept the risks.",
+      "disclaimer": {
+        "title": "Disclaimer",
+        "disclaimerDetail": "You are now entering Jet Protocol Mainnet. Do not proceed if you do not understand and accept the {{TERMS_LINK}}, {{PRIVACY_LINK}}, and the potential for financial loss.",
+        "acceptRisks": "I understand and accept the risks.",
+        "enterMainnet": "Enter Mainnet"
+      }
     },
     "radar": {
       "title": "Radar",
