ui bug fixes, cratio -> risk / leverage

--- a/src/contexts/localization/languages/Jet_UI_DE.json
+++ b/src/contexts/localization/languages/Jet_UI_DE.json
@@ -31,10 +31,10 @@
     "airdrop": "Airdrop",
     "totalDepositedValue": "Ihr eingezahlter Wert",
     "totalBorrowedValue": "Ihr ausgeliehener Wert",
-    "yourRatio": "Ihr Besicherungsgrad",
+    "yourRisk": "Your Risk Level",
     "collateralizationRatio": "Besicherungsgrad",
     "noInputAmount": "Betrag eingeben.",
-    "adjustedCollateralization": "Angepasster Besicherungsgrad",
+    "adjustedLeverage": "Adjusted Leverage",
     "deposit": "Einzahlen",
     "walletBalance": "Wallet-Guthaben",
     "noDepositAmount": "Betrag eingeben.",
@@ -48,7 +48,7 @@
     "noLiquidity": "Unzureichende Liquidität",
     "minCRatio": "Dies wird Ihre Position auf den minimalen Besicherungsgrad setzen und somit Ihr Account im Liquidiationsbereich platzieren. Sind Sie sicher?",
     "belowMinRatio": "Ihre Position ist unzureichend gedeckt. Tätigen Sie eine Einzahlung oder Rückzahlung, um eine Liquidation zu vermeiden.",
-    "subjectToLiquidation": "Diese Transaktion senkt Ihren Besicherungsgrad auf {{NEW-C-RATIO}}%, was eine Liquidation Ihrer Position möglich macht. Möchten Sie trotzdem ausleihen?",
+    "subjectToLiquidation": "This trade increases your leverage to {{NEW-LEVERAGE}}x, which puts you in range of liquidation.",
     "confirm": "Bestätigen",
     "repay": "Zurückzahlen",
     "amountOwed": "Schulden",
@@ -65,14 +65,14 @@
     "noDepositsForBorrow": "Sie müssen Sicherheiten einzahlen, um ausleihen zu konnen.",
     "noDepositsForWithdraw": "Sie haben keine {{ASSET}} eingezahlt, welche ausgezahlt werden können.",
     "noDebtForRepay": "Sie schulden keine {{ASSET}}.",
-    "rejectTrade": "Diese Transaktion würde Ihr Besicherungsgrad auf {{NEW-C-RATIO}}% senken, was unter unserem Minimum von {{JET MIN C-RATIO}}% wäre.",
+    "rejectTrade": "This trade would increase your leverage to {{NEW_LEVERAGE}}x, which is too high. (Max for this pool is {{MAX_LEVERAGE}}x)",
     "insufficientLamports": "Sie zahlen alle Ihre SOL ein, ohne Lamports für Transaktionsgebühren übrig zu lassen! Bitte erneut versuchen mit einem wenig kleineren Betrag.",
     "stillUndercollateralized": "Ihr neuer Besicherungsgrad von {{NEW-C-RATIO}}% ist immer noch unter Jet's minimalen Besicherungsgrad von {{JET MIN C-RATIO}}%. Bitte erwägen Sie eine weitere Rückzahlung, um eine Liquidation zu vermeiden.",
     "txCancelled": "Transaction cancelled.",
     "welcomeAboard": "Welcome Aboard",
     "rentFeeDescription": "I see this is your first time flying with Jet. Please note that to open your account, this transaction will include a refundable one-time rent fee. This is necessary for the Solana blockchain to store ongoing data related to your account. This fee is not collected by Jet Protocol.",
     "rentFeeDetail": "The rent fee for your transaction is {{RENT_FEE}} SOL. This amount will be returned to when you {{TRADE ACTION}} your full balance.",
-    "minColRatioNote": "Note: Minimum c-ratio before partial liquidation is {{MIN_COL_RATIO}}%.",
+    "maxRiskNote": "Note: Maximum Risk Level before partial liquidation is {{MAX_RISK}}",
     "totalSupply": "Total Supply",
     "txSuccessShort": "{{TRADE ACTION}} received."
   },
