--- a/src/contexts/localization/languages/Jet_UI_EN.json
+++ b/src/contexts/localization/languages/Jet_UI_EN.json
@@ -31,10 +31,10 @@
     "airdrop": "Airdrop",
     "totalDepositedValue": "Your Deposited Value",
     "totalBorrowedValue": "Your Borrowed Value",
-    "yourRatio": "Your C-Ratio",
+    "yourRisk": "Your Risk Level",
     "collateralizationRatio": "Collateralization Ratio",
     "noInputAmount": "Enter amount.",
-    "adjustedCollateralization": "Adjusted C-Ratio",
+    "adjustedLeverage": "Adjusted Leverage",
     "deposit": "Deposit",
     "walletBalance": "Wallet Balance",
     "noDepositAmount": "Enter amount",
@@ -48,7 +48,7 @@
     "noLiquidity": "Not enough liquidity.",
     "minCRatio": "This will put your position at our minimum collateralization ratio, therefore placing your account in liquidation territory. Are you sure?",
     "belowMinRatio": "You are undercollateralized. Deposit or repay your debt to avoid liquidation.",
-    "subjectToLiquidation": "This trade lowers your collateralization ratio to {{NEW-C-RATIO}}%, which places you in the range of liquidation subject to market volatility. The minimum collateralization ratio is {{MIN-C-RATIO}}% before partial liquidation. Would you still like to {{TRADE ACTION}}?",
+    "subjectToLiquidation": "This trade increases your leverage to {{NEW-LEVERAGE}}x, which puts you in range of liquidation.",
     "confirm": "Confirm",
     "repay": "Repay",
     "amountOwed": "Available To Repay",
@@ -65,14 +65,14 @@
     "noDepositsForBorrow": "You must deposit collateral in order to borrow.",
     "noDepositsForWithdraw": "You have not deposited any {{ASSET}} to withdraw.",
     "noDebtForRepay": "You don't owe any {{ASSET}}.",
-    "rejectTrade": "This trade would lower your collateralization ratio to {{NEW-C-RATIO}}%, which would be below our minimum ratio of {{JET MIN C-RATIO}}%.",
+    "rejectTrade": "This trade would increase your leverage to {{NEW_LEVERAGE}}x, which is too high. (Max for this pool is {{MAX_LEVERAGE}}x)",
     "insufficientLamports": "You're using all of your SOL, leaving none for transaction fees.",
     "stillUndercollateralized": "Your new C-ratio of {{NEW-C-RATIO}}% is still under Jet's minimum marketplace collateralization ratio of {{JET MIN C-RATIO}}%. Please consider repaying more to avoid liquidation.",
     "txCancelled": "Transaction cancelled.",
     "welcomeAboard": "Welcome Aboard",
     "rentFeeDescription": "I see this is your first time flying with Jet. Please note that to open your account, this transaction will include a refundable one-time rent fee. This is necessary for the Solana blockchain to store ongoing data related to your account. This fee is not collected by Jet Protocol.",
     "rentFeeDetail": "The rent fee for your transaction is {{RENT_FEE}} SOL. This amount will be returned to when you {{TRADE ACTION}} your full balance.",
-    "minColRatioNote": "Note: Minimum c-ratio before partial liquidation is {{MIN_COL_RATIO}}%.",
+    "maxRiskNote": "Note: Maximum Risk Level before partial liquidation is {{MAX_RISK}}",
     "totalSupply": "Total Supply",
     "txSuccessShort": "{{TRADE ACTION}} received."
   },
