--- a/src/contexts/localization/languages/Jet_UI_IT.json
+++ b/src/contexts/localization/languages/Jet_UI_IT.json
@@ -31,10 +31,10 @@
     "airdrop": "Airdrop",
     "totalDepositedValue": "Valore del tuo deposito",
     "totalBorrowedValue": "Valore del tuo prestito",
-    "yourRatio": "Il tuo C-Ratio",
+    "yourRisk": "Your Risk Level",
     "collateralizationRatio": "Rapporto di Collateralizzazione",
     "noInputAmount": "Inserisci quantità.",
-    "adjustedCollateralization": "Rapporto C-Ratio",
+    "adjustedLeverage": "Adjusted Leverage",
     "deposit": "Deposito",
     "walletBalance": "Bilancio Wallet",
     "noDepositAmount": "Inserisci quantità",
@@ -48,7 +48,7 @@
     "noLiquidity": "Non hai abbastanza liquidità.",
     "minCRatio": "Questo metterà la tua posizione al nostro rapporto minimo di garanzia, ponendo quindi il tuo conto in un territorio di liquidazione. Sei sicuro?",
     "belowMinRatio": "Sei sottocollateralizzato. Deposita o rimborsa il tuo debito per evitare la liquidazione.",
-    "subjectToLiquidation": "Questa operazione riduce il tuo rapporto di garanzia a {{NEW-C-RATIO}}%, che ti colloca nella fascia di liquidazione soggetta alla volatilità del mercato. Vuoi ancora prendere in prestito?",
+    "subjectToLiquidation": "This trade increases your leverage to {{NEW-LEVERAGE}}x, which puts you in range of liquidation.",
     "confirm": "Conferma",
     "repay": "Rimborsa",
     "amountOwed": "Importo dovuto",
@@ -65,14 +65,14 @@
     "noDepositsForBorrow": "È necessario depositare garanzie per prendere in prestito.",
     "noDepositsForWithdraw": "Non hai depositato nessun {{ASSET}} da ritirare.",
     "noDebtForRepay": "Non possiedi nessun {{ASSET}}.",
-    "rejectTrade": "Questo scambio abbasserebbe il tuo rapporto di garanzia a {{NEW-C-RATIO}}%, che sarebbe al di sotto del nostro rapporto minimo di {{JET MIN C-RATIO}}%.",
+    "rejectTrade": "This trade would increase your leverage to {{NEW_LEVERAGE}}x, which is too high. (Max for this pool is {{MAX_LEVERAGE}}x)",
     "insufficientLamports": "Stai depositando tutti i tuoi SOL lasciandoti senza fondi per le fee di transazione! Riprova con una quantità in input leggermente inferiore.",
     "stillUndercollateralized": "Il nuovo C-ratio di {{NEW-C-RATIO}}% è ancora sotto il rapporto minimo di garanzia del mercato di Jet di {{JET MIN C-RATIO}}%. Si prega di considerare di rimborsare di più per evitare la liquidazione.",
     "txCancelled": "Transazione cancellata.",
     "welcomeAboard": "Benvenuto a Bordo",
     "rentFeeDescription": "Vedo che è la prima volta che voli con Jet.",
     "rentFeeDetail": "The rent fee for your transaction is {{RENT_FEE}} SOL. This amount will be returned to when you {{TRADE ACTION}} your full balance.",
-    "minColRatioNote": "Note: Minimum c-ratio before partial liquidation is {{MIN_COL_RATIO}}%.",
+    "maxRiskNote": "Note: Maximum Risk Level before partial liquidation is {{MAX_RISK}}",
     "totalSupply": "Fornitura Totale",
     "txSuccessShort": "{{TRADE ACTION}} ricevuto."
   },
