--- a/src/contexts/localization/languages/Jet_UI_KR.json
+++ b/src/contexts/localization/languages/Jet_UI_KR.json
@@ -31,10 +31,10 @@
     "airdrop": "에어드랍",
     "totalDepositedValue": "나의 예치 금액",
     "totalBorrowedValue": "나의 대출 금액",
-    "yourRatio": "나의 C-Ratio",
+    "yourRisk": "Your Risk Level",
     "collateralizationRatio": "담보율",
     "noInputAmount": "금액 입력.",
-    "adjustedCollateralization": "조절된 C-Ratio",
+    "adjustedLeverage": "Adjusted Leverage",
     "deposit": "예치",
     "walletBalance": "지갑 잔액",
     "noDepositAmount": "금액 입력",
@@ -48,7 +48,7 @@
     "noLiquidity": "유동성이 충분하지 않습니다",
     "minCRatio": "이것은 귀하의 포지션을 Jet Protocol의 최소 담보 비율로 설정하여, 귀하의 계정을 청산 영역에 놓이게 할 것입니다. 확실하십니까?",
     "belowMinRatio": "귀하의 담보가 부족합니다. 청산을 피하기 위해 예치하거나 빚을 상환하십시오.",
-    "subjectToLiquidation": "이 거래는 담보 비율을 {{NEW-C-RATIO}}%로 낮추어 청산 대상이 되고, 이 대출에는 {{ORIGINATION FEE}}%의 수수료가 부과됩니다. 그래도 대출 하시겠습니까?",
+    "subjectToLiquidation": "This trade increases your leverage to {{NEW-LEVERAGE}}x, which puts you in range of liquidation.",
     "confirm": "확인",
     "repay": "상환",
     "amountOwed": "빚진 금액",
@@ -65,14 +65,14 @@
     "noDepositsForBorrow": "대출을 받기 위해서는 담보를 예치해야 합니다.",
     "noDepositsForWithdraw": "출금할 {{ASSET}}을 예치하지 않았습니다.",
     "noDebtForRepay": "귀하는 {{ASSET}}의 빚이 없습니다.",
-    "rejectTrade": "이 거래는 담보 비율을 {{NEW-C-RATIO}}%로 낮추어서, 이는 {{JET MIN C-RATIO}}의 최소 비율보다 낮을 것입니다. 이 대출에는 {{ORIGINATION FEE}}%의 수수료가 부과됩니다.",
+    "rejectTrade": "This trade would increase your leverage to {{NEW_LEVERAGE}}x, which is too high. (Max for this pool is {{MAX_LEVERAGE}}x)",
     "insufficientLamports": "거래 수수료에 대한 부담 없이 모든 SOL을 예치하고 있습니다! 약간 낮은 양으로 다시 시도하십시오.",
     "stillUndercollateralized": "{NEW-C-RATIO}}%의 새 C-비율은 여전히 ​​Jet의 최소 시장 담보 비율인 {{JET MIN C-RATIO}}% 미만입니다. 청산을 피하기 위해 더 많은 상환을 고려하십시오.",
     "txCancelled": "거래실패",
     "welcomeAboard": "Welcome Aboard",
     "rentFeeDescription": "I see this is your first time flying with Jet. Please note that to open your account, this transaction will include a refundable one-time rent fee. This is necessary for the Solana blockchain to store ongoing data related to your account. This fee is not collected by Jet Protocol.",
     "rentFeeDetail": "The rent fee for your transaction is {{RENT_FEE}} SOL. This amount will be returned to when you {{TRADE ACTION}} your full balance.",
-    "minColRatioNote": "Note: Minimum c-ratio before partial liquidation is {{MIN_COL_RATIO}}%.",
+    "maxRiskNote": "Note: Maximum Risk Level before partial liquidation is {{MAX_RISK}}",
     "totalSupply": "Total Supply",
     "txSuccessShort": "{{TRADE ACTION}} received."
   },
