--- a/src/contexts/localization/languages/Jet_UI_RU.json
+++ b/src/contexts/localization/languages/Jet_UI_RU.json
@@ -31,10 +31,10 @@
     "airdrop": "Airdrop",
     "totalDepositedValue": "Сумма ваших депозитов",
     "totalBorrowedValue": "Сумма ваших займов",
-    "yourRatio": "Ваш КО",
+    "yourRisk": "Your Risk Level",
     "collateralizationRatio": "Коэффициент обеспечения",
     "noInputAmount": "Введите сумму.",
-    "adjustedCollateralization": "Скорректированный КО",
+    "adjustedLeverage": "Adjusted Leverage",
     "deposit": "Пополнить",
     "walletBalance": "Баланс кошелька",
     "noDepositAmount": "Введите сумму",
@@ -48,7 +48,7 @@
     "noLiquidity": "Недостаточно ликвидности.",
     "minCRatio": "Это действие приведёт к тому, что ваша позиция достигнет минимума коэффициента обеспечения, и ваш счёт может быть подвергнут ликвидации. Вы уверены?",
     "belowMinRatio": "У вас недостаточно средств в залоге. Пополните залог или верните долг чтобы избежать ликвидации.",
-    "subjectToLiquidation": "Эта сделка понизит ваш коэффициент обеспечения до {{NEW-C-RATIO}}%, после чего ваш счёт может быть подвергнут ликвидации. Вы всё-равно хотите занять?",
+    "subjectToLiquidation": "This trade increases your leverage to {{NEW-LEVERAGE}}x, which puts you in range of liquidation.",
     "confirm": "Подтвердить",
     "repay": "Вернуть",
     "amountOwed": "Сумма долга",
@@ -65,14 +65,13 @@
     "noDepositsForBorrow": "Вы должны предоставить залог, чтобы вы могли занять.",
     "noDepositsForWithdraw": "Вы не внесли на депозит {{ASSET}} чтобы вывести",
     "noDebtForRepay": "Вы не дожны {{ASSET}}.",
-    "rejectTrade": "Сделка понизит ваш коэфициент залог {{NEW-C-RATIO}}%, что будет ниже \n минимального уровня {{JET MIN C-RATIO}}%.",
-    "insufficientLamports": "Вы пытаетесь внести на депозит все Sol. У Вас не останется \"лампорт\" на комиссию. Уменьшите сумму Sol и попытайтесь снова ",
+    "rejectTrade": "This trade would increase your leverage to {{NEW_LEVERAGE}}x, which is too high. (Max for this pool is {{MAX_LEVERAGE}}x)",
     "stillUndercollateralized": "Ваш новый К-рейтинг {{NEW-C-RATIO}}% ниже минимального уровня на Jet's протоколе-  {{JET MIN C-RATIO}}%. Пожалуйста, оплатите больше, чтобы избежать ликвидации.",
     "txCancelled": "Transaction cancelled.",
     "welcomeAboard": "Welcome Aboard",
     "rentFeeDescription": "I see this is your first time flying with Jet. Please note that to open your account, this transaction will include a refundable one-time rent fee. This is necessary for the Solana blockchain to store ongoing data related to your account. This fee is not collected by Jet Protocol.",
     "rentFeeDetail": "The rent fee for your transaction is {{RENT_FEE}} SOL. This amount will be returned to when you {{TRADE ACTION}} your full balance.",
-    "minColRatioNote": "Note: Minimum c-ratio before partial liquidation is {{MIN_COL_RATIO}}%.",
+    "maxRiskNote": "Note: Maximum Risk Level before partial liquidation is {{MAX_RISK}}",
     "totalSupply": "Total Supply",
     "txSuccessShort": "{{TRADE ACTION}} received."
   },
