--- a/src/contexts/localization/languages/Jet_UI_SP.json
+++ b/src/contexts/localization/languages/Jet_UI_SP.json
@@ -31,10 +31,10 @@
     "airdrop": "Airdrop",
     "totalDepositedValue": "Tu depósito",
     "totalBorrowedValue": "Tu préstamo",
-    "yourRatio": "Tu C-Ratio",
+    "yourRisk": "Your Risk Level",
     "collateralizationRatio": "Indice de Colateralización",
     "noInputAmount": "Ingresar Monto",
-    "adjustedCollateralization": "C-Ratio Regulado",
+    "adjustedLeverage": "Adjusted Leverage",
     "deposit": "Depositar",
     "walletBalance": "Balance",
     "noDepositAmount": "Ingresar Monto",
@@ -48,7 +48,7 @@
     "noLiquidity": "Liquidez Insuficiente",
     "minCRatio": "Esta decisión lo ubicará en el ratio mínimo de colateralización, colocando su cuenta en el área de liquidación. ¿Desea continuar?",
     "belowMinRatio": "Usted se encuentra por debajo de la colateralización óptima. Deposite liquidez o cancele su deuda para evitar la liquidación.",
-    "subjectToLiquidation": "Esta transacción disminuirá su ratio de colateralización en {{NEW-C-RATIO}}%, lo cual lo ubicará en el rango de liquidación sujeta a la volatilidad del mercado.  El ratio de colateralización mínimo previo a la liquidación parcial es {{MIN-C-RATIO}}% . ¿Todavía le gustaría {{TRADE ACTION}} ?",
+    "subjectToLiquidation": "This trade increases your leverage to {{NEW-LEVERAGE}}x, which puts you in range of liquidation.",
     "confirm": "Confirmar",
     "repay": "Cancelar Deuda",
     "amountOwed": "Disponible Para Saldar",
@@ -65,14 +65,14 @@
     "noDepositsForBorrow": "Debe depositar colateral para tomar prestado.",
     "noDepositsForWithdraw": "No cuenta con {{ASSET}} depositado para retirar.",
     "noDebtForRepay": "No debe {{ASSET}}.\n",
-    "rejectTrade": "Esta operación reduciría su ratio de colateralización a {{NEW-C-RATIO}} %, lo que estaría por debajo de nuestro ratio mínimo de {{JET MIN C-RATIO}}%.",
+    "rejectTrade": "This trade would increase your leverage to {{NEW_LEVERAGE}}x, which is too high. (Max for this pool is {{MAX_LEVERAGE}}x)",
     "insufficientLamports": "¡Usted está depositando todos sus SOL sin dejar Lamports en su billetera para pagar los fees de las transacciones! Vuelva a intentarlo con una cantidad ligeramente inferior.",
     "stillUndercollateralized": "Su nuevo C-ratio de {{NEW-C-RATIO}}% todavía está por debajo del ratio mínimo de colateralización del mercado de Jet de {{JET MIN C-RATIO}}%. Por favor, considere pagar más para evitar la liquidación.\n",
     "txCancelled": "Transacción Cancelada.",
     "welcomeAboard": "Bienvenido A Bordo",
     "rentFeeDescription": "Esta es su primera vez volando con Jet. Por favor, tenga en cuenta que al abrir su cuenta, se incluirá una tarifa única y reembolsable. Esto es necesario para que la blockchain de Solana almacene datos relacionados a tu cuenta. Esta tarifa no es cobrada por Jet Protocol.",
     "rentFeeDetail": "La tarifa de su transacción es de {{RENT_FEE}} SOL. El monto será reembolsado cuando su {{TRADE ACTION}} sea saldado.",
-    "minColRatioNote": "Nota: El C-Ratio mínimo previo a la liquidación parcial es de  {{MIN_COL_RATIO}}%.",
+    "maxRiskNote": "Note: Maximum Risk Level before partial liquidation is {{MAX_RISK}}",
     "totalSupply": "Oferta Total",
     "txSuccessShort": "{{TRADE ACTION}} recibida."
   },
