--- a/src/contexts/localization/languages/Jet_UI_TR.json
+++ b/src/contexts/localization/languages/Jet_UI_TR.json
@@ -31,10 +31,10 @@
     "airdrop": "Airdrop",
     "totalDepositedValue": "Yatırılan varlık değeriniz",
     "totalBorrowedValue": "Ödünç Aldığınız Varlık",
-    "yourRatio": "C-Oranınız",
+    "yourRisk": "Your Risk Level",
     "collateralizationRatio": "Teminat Oranı",
     "noInputAmount": "Miktar girin",
-    "adjustedCollateralization": "Düzeltilmiş C-Oranı",
+    "adjustedLeverage": "Adjusted Leverage",
     "deposit": "Yatırma",
     "walletBalance": "Cüzdan Bakiyesi",
     "noDepositAmount": "Miktar girin",
@@ -48,7 +48,7 @@
     "noLiquidity": "Yeterli likidite yok.",
     "minCRatio": "Bu işlem, pozisyonunuzu minimum teminat oranına alacaktır. Dolayısıyla hesabınız, likidasyon bölgesine girecektir. Bu işlemi yapmayı istediğinize emin misiniz?",
     "belowMinRatio": "Yeterli teminata sahip değilsiniz. Likidasyondan kaçınmak için para yatırın veya borcunuzu geri ödeyin.",
-    "subjectToLiquidation": "Bu işlem, likidasyon oranınızı %{{NEW-C-RATIO}} 'ya düşürür ve bu da sizi likidasyona tabi kılar. Yine de ödünç almak ister misin?",
+    "subjectToLiquidation": "This trade increases your leverage to {{NEW-LEVERAGE}}x, which puts you in range of liquidation.",
     "confirm": "Onayla",
     "repay": "Geri öde",
     "amountOwed": "Borçlu Tutar",
@@ -64,14 +64,14 @@
     "noDepositsForBorrow": "Ödünç almak için teminat yatırmanız gerekiyor.",
     "noDepositsForWithdraw": "Çekme istediğiniz herhangi bir {{ASSET}} yatırımınız yok. ",
     "noDebtForRepay": "Hiç {{ASSET}} borcunuz yok.",
-    "rejectTrade": "Bu ticaret, sizin yeni teminat oranınızı {{NEW-C-RATIO}}% minimum oranımız olan {{JET MIN C-RATIO}}%",
+    "rejectTrade": "This trade would increase your leverage to {{NEW_LEVERAGE}}x, which is too high. (Max for this pool is {{MAX_LEVERAGE}}x)",
     "insufficientLamports": "İşlem ücretlerini dahi karşılamayacak kadar çok SOL yatırıyorsunuz. Şu ankinden daha az bir miktar kullanarak yeniden deneyin. ",
     "stillUndercollateralized": "Yeni C-oranınız {{NEW-C-RATIO}}% hala Jet Protocol'ün minimum piyasa teminat oranı",
     "txCancelled": "Transaction cancelled.",
     "welcomeAboard": "Welcome Aboard",
     "rentFeeDescription": "I see this is your first time flying with Jet. Please note that to open your account, this transaction will include a refundable one-time rent fee. This is necessary for the Solana blockchain to store ongoing data related to your account. This fee is not collected by Jet Protocol.",
     "rentFeeDetail": "The rent fee for your transaction is {{RENT_FEE}} SOL. This amount will be returned to when you {{TRADE ACTION}} your full balance.",
-    "minColRatioNote": "Note: Minimum c-ratio before partial liquidation is {{MIN_COL_RATIO}}%.",
+    "maxRiskNote": "Note: Maximum Risk Level before partial liquidation is {{MAX_RISK}}",
     "totalSupply": "Total Supply",
     "txSuccessShort": "{{TRADE ACTION}} received."
   },
