--- a/src/contexts/localization/languages/Jet_UI_ZH.json
+++ b/src/contexts/localization/languages/Jet_UI_ZH.json
@@ -31,10 +31,10 @@
     "airdrop": "Airdrop",
     "totalDepositedValue": "存款总价值",
     "totalBorrowedValue": "借贷总额",
-    "yourRatio": "您的质押率",
+    "yourRisk": "Your Risk Level",
     "collateralizationRatio": "质押率",
     "noInputAmount": "输入金额",
-    "adjustedCollateralization": "调整过质押率",
+    "adjustedLeverage": "Adjusted Leverage",
     "deposit": "存款",
     "walletBalance": "你的钱包余额",
     "noDepositAmount": "输入金额",
@@ -48,7 +48,7 @@
     "noLiquidity": "流动性不足",
     "minCRatio": "这将使您的头寸处于我们的最低抵押率，从而使您的账户处于清算区域。 你确定吗？",
     "belowMinRatio": "您已低于最小质押率。请多存一些抵押物或偿还一些债务",
-    "subjectToLiquidation": "您这个交易会降低质押率到 {{NEW-C-RATIO}}% 比 Jet 要求的质押率还低 从而使您的账户处于清算区域。你确定吗？",
+    "subjectToLiquidation": "This trade increases your leverage to {{NEW-LEVERAGE}}x, which puts you in range of liquidation.",
     "confirm": "确认",
     "repay": "偿还",
     "amountOwed": "以借贷金额",
@@ -65,14 +65,14 @@
     "noDepositsForBorrow": "您需要存抵押物才能再借款",
     "noDepositsForWithdraw": "您没有存任何 {{ASSET}} 来提款.",
     "noDebtForRepay": "您不欠任何 {{ASSET}}.",
-    "rejectTrade": "这个交易手续会降低您的质押率到 {{NEW-C-RATIO}}%, 而且会比我们的对低质押率限制 {{JET MIN C-RATIO}}% 还低.",
+    "rejectTrade": "This trade would increase your leverage to {{NEW_LEVERAGE}}x, which is too high. (Max for this pool is {{MAX_LEVERAGE}}x)",
     "insufficientLamports": "您这交易会存进您全部的SOL 您的交易费会不够! 请您输入低一点的金额",
     "stillUndercollateralized": "您的新 {{NEW-C-RATIO}}% C-Ratio 仍低于 Jet 的最低市场抵押比率 {{JET MIN C-RATIO}}% 。 请考虑偿还更多，以避免清算。",
     "txCancelled": "Transaction cancelled.",
     "welcomeAboard": "Welcome Aboard",
     "rentFeeDescription": "I see this is your first time flying with Jet. Please note that to open your account, this transaction will include a refundable one-time rent fee. This is necessary for the Solana blockchain to store ongoing data related to your account. This fee is not collected by Jet Protocol.",
     "rentFeeDetail": "The rent fee for your transaction is {{RENT_FEE}} SOL. This amount will be returned to when you {{TRADE ACTION}} your full balance.",
-    "minColRatioNote": "Note: Minimum c-ratio before partial liquidation is {{MIN_COL_RATIO}}%.",
+    "maxRiskNote": "Note: Maximum Risk Level before partial liquidation is {{MAX_RISK}}",
     "totalSupply": "Total Supply",
     "txSuccessShort": "{{TRADE ACTION}} received."
   },
