--- a/src/contexts/localization/languages/Jet_UI_DE.json
+++ b/src/contexts/localization/languages/Jet_UI_DE.json
@@ -34,7 +34,8 @@
     "yourRisk": "Your Risk Level",
     "collateralizationRatio": "Besicherungsgrad",
     "noInputAmount": "Betrag eingeben.",
-    "adjustedLeverage": "Adjusted Leverage",
+    "accountLeverage": "Account Leverage",
+    "adjustedRiskLevel": "Adjusted Risk Level",
     "deposit": "Einzahlen",
     "walletBalance": "Wallet-Guthaben",
     "noDepositAmount": "Betrag eingeben.",
