--- a/src/contexts/localization/languages/Jet_UI_EN.json
+++ b/src/contexts/localization/languages/Jet_UI_EN.json
@@ -34,7 +34,8 @@
     "yourRisk": "Your Risk Level",
     "collateralizationRatio": "Collateralization Ratio",
     "noInputAmount": "Enter amount.",
-    "adjustedLeverage": "Adjusted Leverage",
+    "accountLeverage": "Account Leverage",
+    "adjustedRiskLevel": "Adjusted Risk Level",
     "deposit": "Deposit",
     "walletBalance": "Wallet Balance",
     "noDepositAmount": "Enter amount",
