--- a/src/contexts/localization/languages/Jet_UI_IT.json
+++ b/src/contexts/localization/languages/Jet_UI_IT.json
@@ -34,7 +34,8 @@
     "yourRisk": "Your Risk Level",
     "collateralizationRatio": "Rapporto di Collateralizzazione",
     "noInputAmount": "Inserisci quantità.",
-    "adjustedLeverage": "Adjusted Leverage",
+    "accountLeverage": "Account Leverage",
+    "adjustedRiskLevel": "Adjusted Risk Level",
     "deposit": "Deposito",
     "walletBalance": "Bilancio Wallet",
     "noDepositAmount": "Inserisci quantità",
