--- a/src/contexts/localization/languages/Jet_UI_SP.json
+++ b/src/contexts/localization/languages/Jet_UI_SP.json
@@ -34,7 +34,8 @@
     "yourRisk": "Your Risk Level",
     "collateralizationRatio": "Indice de Colateralización",
     "noInputAmount": "Ingresar Monto",
-    "adjustedLeverage": "Adjusted Leverage",
+    "accountLeverage": "Account Leverage",
+    "adjustedRiskLevel": "Adjusted Risk Level",
     "deposit": "Depositar",
     "walletBalance": "Balance",
     "noDepositAmount": "Ingresar Monto",
