--- a/src/contexts/localization/languages/Jet_Definitions_IT.json
+++ b/src/contexts/localization/languages/Jet_Definitions_IT.json
@@ -38,5 +38,13 @@
   "liquidationPremium": {
     "term": "Premio di liquidazione",
     "definition": "La garanzia aggiuntiva viene fornita ai liquidatori che rimborsano il debito dei conti che sono scesi al di sotto del rapporto minimo di garanzia. Il valore in dollari di questa garanzia aggiuntiva è pari al Premio di liquidazione moltiplicato per il valore in dollari del debito rimborsato. La garanzia aggiuntiva viene pagata dal conto dell'utente in liquidazione."
+  },
+  "accountLeverage": {
+    "term": "Account Leverage",
+    "definition": "TODO: Norman definition here"
+  },
+  "riskLevel": {
+    "term": "Risk Level",
+    "definition": "TODO: Norman definition here"
   }
 }
