--- a/src/contexts/localization/languages/Jet_Definitions_KR.json
+++ b/src/contexts/localization/languages/Jet_Definitions_KR.json
@@ -38,5 +38,13 @@
   "liquidationPremium": {
     "term": "유동성 프리미엄",
     "definition": ""
+  },
+  "accountLeverage": {
+    "term": "Account Leverage",
+    "definition": "TODO: Norman definition here"
+  },
+  "riskLevel": {
+    "term": "Risk Level",
+    "definition": "TODO: Norman definition here"
   }
 }
