--- a/src/contexts/localization/languages/Jet_Definitions_RU.json
+++ b/src/contexts/localization/languages/Jet_Definitions_RU.json
@@ -38,5 +38,13 @@
   "liquidationPremium": {
     "term": "Ликвидационная надбавка",
     "definition": "Процент (%) надбавки к дефициту обеспечения займа, применяемый к ликвидационной стоимости пользовательского залога."
+  },
+  "accountLeverage": {
+    "term": "Account Leverage",
+    "definition": "TODO: Norman definition here"
+  },
+  "riskLevel": {
+    "term": "Risk Level",
+    "definition": "TODO: Norman definition here"
   }
 }
