--- a/src/contexts/localization/languages/Jet_Definitions_TR.json
+++ b/src/contexts/localization/languages/Jet_Definitions_TR.json
@@ -38,5 +38,13 @@
   "liquidationPremium": {
     "term": "Premium Likidasyon",
     "definition": "Kullanıcının varlıklarına likidasyon sırasında uygulanan teminat açığındaki (%) artış"
+  },
+  "accountLeverage": {
+    "term": "Account Leverage",
+    "definition": "TODO: Norman definition here"
+  },
+  "riskLevel": {
+    "term": "Risk Level",
+    "definition": "TODO: Norman definition here"
   }
 }
