--- a/src/contexts/localization/languages/Jet_UI_RU.json
+++ b/src/contexts/localization/languages/Jet_UI_RU.json
@@ -34,7 +34,8 @@
     "yourRisk": "Your Risk Level",
     "collateralizationRatio": "Коэффициент обеспечения",
     "noInputAmount": "Введите сумму.",
-    "adjustedLeverage": "Adjusted Leverage",
+    "accountLeverage": "Account Leverage",
+    "adjustedRiskLevel": "Adjusted Risk Level",
     "deposit": "Пополнить",
     "walletBalance": "Баланс кошелька",
     "noDepositAmount": "Введите сумму",
